add landscapes and footer

--- a/landing_page.html
+++ b/landing_page.html
@@ -26,11 +26,13 @@
             <p class="text"><br>If you like adventures, the medieval world, fantasy and video games. you should give it a try.</p>
         </div>
         <div class="imag">
-            <img src="https://64.media.tumblr.com/d5b0fb554544fc0383b80ee981ac7208/tumblr_nqkibbGc8m1uwmbeao2_500.gif" alt="gif">
+            <img id="gif"  src="https://64.media.tumblr.com/d5b0fb554544fc0383b80ee981ac7208/tumblr_nqkibbGc8m1uwmbeao2_500.gif" alt="gif">
         </div>
     </main>
-    <a name="chara"></a>
-    <p class="landscape"> <strong>Some  landscapes</strong></p>
+    <div class="landscape">
+        <a name="chara"></a>
+        <p><strong>Some  landscapes</strong></p>
+    </div>
     <div class="character">
         <div class="carrousel" id="imag1"></div>
         <div class="carrousel" id="imag2"></div>
@@ -38,16 +40,25 @@
         <div class="carrousel" id="imag4"></div>
         <div class="carrousel" id="imag5"></div>
     </div>
-    <div>
+    <div class="landscape" id="landscapetext">
+        <p>This world have a great and wonderful landscapes, giving to you an extremly greatful inmersion in the story and gameplay</p>
+    </div>
+    <div class = "phrase">
+    <div id="phrase1" >
         <h1>"I tell you this, for when my days have come to and end. You, shall be king."</h1>
+    </div>
+    <div id="phrase2">
+        <p><strong>-Terenas Menethil, King of Lordaeron</strong></p>
+    </div>
     </div>
 </body>
 <footer>
-    <ul>
-        <li>a</li>
-        <li>b</li>
-        <li>c</li>
-        <li>d</li>
-    </ul>
+    <div id="footer">
+        <ul class="footerlist">
+            <li><img class="footerimage" src="https://cdn-icons-png.flaticon.com/512/20/20673.png" alt="fb logo"></li>
+            <li><img class="footerimage" src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="ig logo"></li>
+            <li><img class="footerimage" src="https://cdn-icons-png.flaticon.com/512/1384/1384012.png" alt="yt logo"></li>
+        </ul>
+    </div>
 </footer>
 </html>
