fix font-size phrase

--- a/landing_page.html
+++ b/landing_page.html
@@ -43,11 +43,11 @@
     <div class="landscape" id="landscapetext">
         <p>This world have a great and wonderful landscapes, giving to you an extremly greatful inmersion in the story and gameplay</p>
     </div>
-    <div class = "phrase">
-    <div id="phrase1" >
+    <div id="phrase">
+    <div class="phrase1" >
         <h1>"I tell you this, for when my days have come to and end. You, shall be king."</h1>
     </div>
-    <div id="phrase2">
+    <div class="phrase2">
         <p><strong>-Terenas Menethil, King of Lordaeron</strong></p>
     </div>
     </div>
